correct page alignment issue

--- a/css/sec2.css
+++ b/css/sec2.css
@@ -7,8 +7,7 @@
 
 
 .sec2buttons {
-    position: absolute;
-    top: 23rem;
+
     width: 20rem;
     margin-left: 3rem;
 }
